# powertrace-sim

./: .gitignore  .gitmodules  AGENTS.md  Dockerfile  README.md  TRAINING_PIPELINE.md  aggregate_metrics.py  burn.csv  burn_plot.py  debug_labels.py  endpoint.yml  evaluation.ipynb  example_inference_azure_conv.csv  ls-filesq  model.npz  plot_training_losses.py  pyproject.toml  requirements.txt  run_all_eval.py  run_all_training.py  test_baseline.txt
.mplconfig/: fontlist-v390.json
client/: README.MD  backend_request_func.py  benchmark_dataset.py  benchmark_serving.py  client.py  client_async.py  deepseek-r1-distill-70b_tp4_p0.125_d2025-05-18-09-14-06.csv  deepseek-r1-distill-70b_tp4_p0.125_d2025-05-18-11-21-32.csv  deepseek-r1-distill-70b_tp4_p0.125_d2025-05-27-08-16-45.csv  deepseek-r1-distill-70b_tp4_p0.125_d2025-05-27-09-19-40.csv  deepseek-r1-distill-70b_tp4_p0.125_d2025-05-27-21-19-52.csv  deepseek-r1-distill-70b_tp4_p0.125_d2025-05-27-22-22-46.csv  deepseek-r1-distill-70b_tp4_p0.125_d2025-05-27-23-25-42.csv  deepseek-r1-distill-70b_tp4_p0.25_d2025-05-27-08-27-13.csv  deepseek-r1-distill-70b_tp4_p0.25_d2025-05-27-09-30-08.csv  deepseek-r1-distill-70b_tp4_p0.25_d2025-05-27-21-30-20.csv  deepseek-r1-distill-70b_tp4_p0.25_d2025-05-27-22-33-14.csv  deepseek-r1-distill-70b_tp4_p0.25_d2025-05-27-23-36-10.csv  deepseek-r1-distill-70b_tp4_p0.5_d2025-05-18-09-35-01.csv  deepseek-r1-distill-70b_tp4_p0.5_d2025-05-18-11-42-26.csv  deepseek-r1-distill-70b_tp4_p0.5_d2025-05-27-08-37-33.csv  deepseek-r1-distill-70b_tp4_p0.5_d2025-05-27-09-40-28.csv  (+2717 more)
docs/: data_flow.md  (+2 more)
(+6159 files in other folders)
