[project]
name = "powertrace-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.7.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pytest>=9.0.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]

[tool.pytest.ini_options]
testpaths = ["model/tests"]
